feat: Add intrinsic opacity to materials, and use it in the default model sorter for proper transparency ordering.